--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "bug-invaders",
   "version": "1.0.0",
-  "scripts":{
-    "build" : "./node_modules/.bin/webpack --config webpack.config.js"
+  "scripts": {
+    "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
-  "author":"Eric Schreffler",
-
+  "author": "Eric Schreffler",
   "dependencies": {},
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
   }
