--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "author": "Eric Schreffler",
   "dependencies": {},
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
   }
